fix: using toList rather than Collectors.toList